State safed.