@@ -78,9 +78,15 @@
            ! Check for details in the README.adoc#Dynamic Agents
           -->
           <argLine>
-            -XX:+EnableDynamicAgentLoading
+            @{argLine}
             --enable-preview
-            --add-modules jdk.incubator.vector
+            --add-modules jdk.internal.classfile
+            --add-exports java.base/jdk.internal.classfile=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.attribute=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.components=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.constantpool=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.impl=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.instruction=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
@@ -92,9 +98,16 @@
            ! Check for details in the README.adoc#Dynamic Agents
           -->
           <argLine>
+            @{argLine}
             -XX:+EnableDynamicAgentLoading
             --enable-preview
-            --add-modules jdk.incubator.vector
+            --add-modules jdk.internal.classfile
+            --add-exports java.base/jdk.internal.classfile=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.attribute=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.components=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.constantpool=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.impl=ALL-UNNAMED
+            --add-exports java.base/jdk.internal.classfile.instruction=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
@@ -105,15 +118,34 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <configuration>
-            <debug>false</debug>
+            <debug>true</debug>
             <enablePreview>true</enablePreview>
             <compilerArgs>
-              <arg>--add-modules</arg>
-              <arg>jdk.incubator.vector</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile=com.soebes.jdk</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.instruction=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.instruction=com.soebes.jdk</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.attribute=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.attribute=com.soebes.jdk</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.components=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.components=com.soebes.jdk</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.constantpool=ALL-UNNAMED</arg>
+              <arg>--add-exports</arg>
+              <arg>java.base/jdk.internal.classfile.constantpool=com.soebes.jdk</arg>
             </compilerArgs>
           </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
   </build>
+
 </project>
